2010-09-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-end-of-tag): Improve regexp.
	(shimbun-beginning-of-tag, shimbun-remove-orphaned-tag-strips):
	New functions.

	* sb-asahi.el (shimbun-asahi-clear-contents)
	* sb-sankei.el (shimbun-sankei-clear-contents):
	Use shimbun-remove-orphaned-tag-strips.

2010-09-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-clear-contents): Remove orphaned tag
	strips.

2010-08-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-itmedia.el (shimbun-itmedia-group-alist): Update url for kodera.
	(shimbun-get-headers): Add regexp to look for kodera's articles.

2010-08-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nikkei.el (shimbun-get-headers, shimbun-make-contents): Replace
	Lisp calls to delete-backward-char by calls to delete-char.

2010-06-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kantei.el: Add groups for ex-prime minister.

2010-06-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kantei.el (shimbun-kantei-x-face-alist): Add new face.

2010-03-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-text-entity-charset): Fix regexp matching meta
	tag.

2010-03-09  David Engster  <dengste@eml.cc>

	* shimbun.el (shimbun-mime-replace-image-tags): Pay attention to
	w3m-ignored-image-url-regexp.

2010-03-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-text-entity-charset): Prefer meta charset rather
	than the one shimbun decides.

2010-03-03  David Engster  <dengste@eml.cc>

	* sb-rss-blogs.el (shimbun-get-headers): Replace call to
	shimbun-rss-get-headers with luna-call-next-method.

	* sb-rss.el (shimbun-get-headers): Revert 5th arg `quit-immediately'.
	(shimbun-rss-get-headers): Delete those headers which only appear to
	be new but are actualy older than the ones we already have.  Sort the
	headers by date if possible.  Added doc-string.
	(shimbun-rss-get-headers-1): New helper function to fetch all items.

	* sb-atom.el (shimbun-atom-get-headers, shimbun-atom-get-headers-1):