@@ -1,3 +1,7 @@
+2010-09-20  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* nnshimbun.el (nnshimbun-request-group): Take an optional `info' arg.
+
 2010-09-13  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* shimbun.el (shimbun-end-of-tag): Improve regexp.
